Closed Bug 1191148 Opened 10 years ago Closed 10 years ago

[e10s] Page may display things on fullscreen without triggering the warning prompt

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
e10s + ---
firefox41 --- affected
firefox42 --- fixed

People

(Reporter: xidorn, Assigned: xidorn)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Attached file testcase
Steps to reproduce: 1. Open the testcase 2. Click the black box Expected result: The browser doesn't enter fullscreen because the black box is removed immediately Actual result: The browser enters fullscreen but does not show the warning prompt
Attached patch patchSplinter Review
Assignee: nobody → quanxunzhen
Attachment #8643406 - Flags: review?(bugs)
Comment on attachment 8643406 [details] [diff] [review] patch Could we have a testcase for this to catch future regressions? Do we need this on branches?
Attachment #8643406 - Flags: review?(bugs) → review+
I reasonably believe we have had such testcase... we just haven't enabled them on e10s...
url: https://hg.mozilla.org/integration/mozilla-inbound/rev/dde1881bc8513bc5c81d3d5cdf09c76563b8b743 changeset: dde1881bc8513bc5c81d3d5cdf09c76563b8b743 user: Xidorn Quan <quanxunzhen@gmail.com> date: Thu Aug 06 15:37:48 2015 +1000 description: Bug 1191148 - Don't count fullscreen request handled if we don't change the document state. r=smaug
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: