Bug 1191148 - Don't count fullscreen request handled if we don't change the document state. r=smaug

--HG--
extra : source : 33ad58fdc763e3c6d647b6aec100d2ab9d893316